Fixed z-index issue with menu top position.
git-svn-id: https://plugins.svn.wordpress.org/wp-responsive-menu/trunk@968236 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wprmenu.css
+++ b/css/wprmenu.css
@@ -166,6 +166,7 @@ body { position: relative!important; }
 	width:100%;
 	display: none;
 	position: relative;
+	z-index: 9999;
 }
 #wprmenu_menu.left, #wprmenu_menu.right {
     display: none;
